@startuml request-managers
title Vault Request Managers
hide empty members

skinparam linetype ortho

package misc {
    class "Escrow" as PoolEscrow<<pool>>
    class "Escrow" as RouterEscrow<<router>>
}

package spoke {
    class Spoke
    class BalanceSheet
    interface IRequestManager
    interface ITrustedContractUpdate
}

interface IBaseRequestManager
interface IAsyncRequestManager
interface ISyncManager

IBaseRequestManager -up-|> IRequestManager

IAsyncRequestManager -up-|> IBaseRequestManager
ISyncManager -up-|> ITrustedContractUpdate

AsyncRequestManager -up-> BalanceSheet
AsyncRequestManager -up-|> IAsyncRequestManager
BalanceSheet -up-> PoolEscrow

SyncManager -up-|> ISyncManager
SyncManager -up--> BalanceSheet

VaultRouter -up-> RouterEscrow
VaultRouter -up-> Spoke

@enduml
